--- a/app/src/main/res/drawable/circle_shape.xml
+++ b/app/src/main/res/drawable/circle_shape.xml
@@ -6,7 +6,7 @@
             android:shape="ring"
             android:thickness="9dp"
             android:useLevel="false">
-            <solid android:color="@color/colorAccent"/>
+            <solid android:color="#ADDAD5"/>
         </shape>
     </item>
 </layer-list>
