--- a/app/src/main/res/layout/sub_item.xml
+++ b/app/src/main/res/layout/sub_item.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/colorAccent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -16,49 +16,29 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+
+            <ImageView
+                android:id="@+id/subItemImageView"
+                android:layout_width="68dp"
+                android:layout_height="52dp"
+                android:background="@android:color/transparent"
+                android:scaleType="fitCenter"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/mastercard" />
+
             <TextView
-                android:id="@+id/recyclerViewTitleTextView"
+                android:id="@+id/subItemNameTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/expandable_cards_recyclerview"
+                android:text="MIR"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/subItemMoneyTextView"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/expandableLayout"
-                android:layout_width="409dp"
-                android:layout_height="515dp"
-                android:visibility="visible"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <ImageView
-                    android:id="@+id/firstBankCardImageView"
-                    android:layout_width="68dp"
-                    android:layout_height="52dp"
-                    android:layout_marginTop="32dp"
-                    android:background="@android:color/transparent"
-                    android:scaleType="fitCenter"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/mastercard" />
-
                 <TextView
-                    android:id="@+id/firstBankCardNameTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:layout_marginTop="32dp"
-                    android:text="MIR"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="@+id/firstBankCardMoneyTextView"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/firstBankCardMoneyTextView"
+                    android:id="@+id/subItemMoneyTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="19dp"
@@ -66,44 +46,8 @@
                     android:text="10000"
                     android:textSize="18sp"
                     android:textStyle="bold"
-                    app:layout_constraintStart_toEndOf="@+id/firstBankCardImageView"
-                    app:layout_constraintTop_toBottomOf="@+id/firstBankCardNameTextView" />
-
-                <ImageView
-                    android:id="@+id/secondBankCardImageView"
-                    android:layout_width="68dp"
-                    android:layout_height="52dp"
-                    android:layout_marginTop="16dp"
-                    android:scaleType="fitCenter"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/firstBankCardImageView"
-                    app:srcCompat="@drawable/mir" />
-
-                <TextView
-                    android:id="@+id/secondBankCardNameTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:layout_marginTop="16dp"
-                    android:text="MIR"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="@+id/firstBankCardMoneyTextView"
-                    app:layout_constraintTop_toBottomOf="@+id/firstBankCardMoneyTextView" />
-
-                <TextView
-                    android:id="@+id/secondBankCardMoneyTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="19dp"
-                    android:layout_marginTop="1dp"
-                    android:text="10000"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toEndOf="@+id/secondBankCardImageView"
-                    app:layout_constraintTop_toBottomOf="@+id/secondBankCardNameTextView" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                    app:layout_constraintStart_toEndOf="@+id/subItemImageView"
+                    app:layout_constraintTop_toBottomOf="@+id/subItemNameTextView" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
