--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -6,10 +6,10 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="100dp"
-        android:layout_height="150dp"
+        android:layout_width="@dimen/top_card_width"
+        android:layout_height="@dimen/top_card_height"
         android:layout_marginStart="5dp"
-        app:cardCornerRadius="10dp"
+        app:cardCornerRadius="@dimen/card_view_corner_radius"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -23,7 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
-                android:textSize="10sp"
+                android:textSize="@dimen/top_card_action_size"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -31,7 +31,7 @@
             <ImageView
                 android:id="@+id/cardImageView"
                 android:layout_width="wrap_content"
-                android:layout_height="80dp"
+                android:layout_height="@dimen/top_card_image_height"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -41,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:textSize="12sp"
+                android:textSize="@dimen/top_card_name_size"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/actionTextView"
                 app:layout_constraintEnd_toEndOf="parent"
