--- a/app/src/main/res/layout/nesting_item.xml
+++ b/app/src/main/res/layout/nesting_item.xml
@@ -1,32 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#f3f3f3"
-        app:cardElevation="8dp"
-        android:layout_margin="12dp">
+        android:layout_margin="@dimen/default_layout_margin"
+        app:cardCornerRadius="@dimen/card_view_corner_radius"
+        app:cardBackgroundColor="@color/top_cards_background"
+        app:cardElevation="@dimen/default_card_elevation">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp"
+            android:layout_margin="@dimen/default_layout_margin"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/tv_item_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="12sp"
-                android:textSize="18sp"
-                android:text="Item Title"/>
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_sub_item"
+                android:padding="@dimen/default_padding"
+                tools:text="Item Title"
+                android:textSize="@dimen/main_item_title_size" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/expandableLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:visibility="visible"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_sub_item"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
